unpackaged/main/default/objects/Booking_Setting__mdt/Booking_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Booking Setting</label>
    <pluralLabel>Booking Settings</pluralLabel>
</CustomObject>