unpackaged/main/default/objects/Booking_Setting__mdt/fields/RevOps_Deal_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>RevOps_Deal_Template_ID__c</fullName>
    <label>RevOps Deal Template ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>