unpackaged/main/default/objects/Booking_Setting__mdt/fields/RevOps_Template__c.field-meta.xml
<CustomField>
    <fullName>RevOps_Template__c</fullName>
    <label>RevOps Template</label>
    <referenceTo>RevOps_Template__mdt</referenceTo>
    <relationshipLabel>Booking Settings</relationshipLabel>
    <relationshipName>Booking_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>