unpackaged/main/default/objects/Booking_Setting__mdt/fields/Term_Number_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Term_Number_Calculation__c</fullName>
    <label>Term Number Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>Equal originating opp</fullName>
            </value>
            <value>
                <fullName>Add 1 to originating opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>